# survey-ip-scraper

./: .gitignore  AUTOMATION.md  GITHUB_SETUP.md  LICENSE  QUICKSTART.md  README.md  SETUP.md  check_socks5.py  environment.yml  pyproject.toml  requirements.txt  results.csv  run_local.sh  socks5.txt
.github/workflows/: auto-scrape.yml
data/: ips_to_scrape.txt  results_20251031_110548.csv  results_20251031_111805.csv  results_20251109_095521.csv  results_20251110_104644.csv  results_20251117_070046.csv  results_20251117_133904.csv  results_20251118_113727.csv  results_20251118_115733.csv  results_20251118_155219.csv  results_20251118_173755.csv  results_20251124_093313.csv  results_20251124_094955.csv  results_20251124_095908.csv  results_20251124_100437.csv  results_20251124_103307.csv  results_20251125_050148.csv  results_20251125_052234.csv  results_20251125_054226.csv  results_20251125_082045.csv  results_20251129_054435.csv  results_20251129_203254.csv  results_20251129_211232.csv  results_20251130_194843.csv  results_20251201_172619.csv  results_20251202_091438.csv  results_20251206_053649.csv  results_20251218_035530.csv  results_20251218_224709.csv  results_20251223_072238.csv  results_20251228_215307.csv  results_20251231_100554.csv  results_20260105_032737.csv  results_20260105_194415.csv  results_20260108_175919.csv  results_20260109_111833.csv  results_20260111_205456.csv  results_20260112_201153.csv  results_20260114_105950.csv  results_20260114_135434.csv  (+25 more)
ests/: test_lookup.py
src/survey_ip/: cli.py  config_example.yaml  lookup.py  utils.py
